kubernetes/apps/plex/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-plex
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-plex: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: plex
            app.kubernetes.io/name: plex
            app.kubernetes.io/component: main
      toPorts:
        - ports:
            - port: "32400"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/component: main
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-plex: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
